--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@vitejs/plugin-react": "^5.1.4",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.1.12"
   }
 }
